--- a/profile.html
+++ b/profile.html
@@ -50,7 +50,7 @@
             </div>
             <div class="btn-download">
               <a
-                href="https://drive.google.com/file/d/1Ntuaw105SmAlV_AxuX3tV_7IWMMhIS1E/view?usp=share_link"
+                href="https://drive.google.com/file/d/1S6VFz8I13w4qHy9G0dzro8kRUolSgMkv/view?usp=sharing"
                 target="_blank"
               >
                 <button>
@@ -137,6 +137,94 @@
             </div>
           </div>
         </div>
+
+        <!-- CERTIFICATE -->
+        <div class="skill">
+          <div class="skill-title">
+            <p>Certificate</p>
+          </div>
+          <div class="skill-list">
+            <div class="uiux">
+              <div class="my-uiux">
+                <i class="fa-regular fa-circle-dot"></i>
+              </div>
+              <p>
+                <a
+                  href="https://file.notion.so/f/s/fc31d70d-594c-46f0-ab93-c6eb4dfe6905/DCert_UI_UX_Research__Design_Wave_20_Arif_Setiawan.pdf?id=ab5a1d60-f4fc-4afe-8eb1-82202248059a&table=block&spaceId=6fea6c1c-643b-44cc-a680-2b80a566ae98&expirationTimestamp=1689004800000&signature=Q75AMO7BpnmwYSdDdHDUuF1xtkrjLH1-kgktK_IlNqE&downloadName=DCert_UI_UX+Research+%26+Design_Wave+20_Arif+Setiawan.pdf"
+                  target="_blank"
+                >
+                  DCert_UI_UX Research & Design_Wave 20_Arif Setiawan.pdf
+                </a>
+              </p>
+            </div>
+            <div class="uiux">
+              <div class="my-uiux">
+                <i class="fa-regular fa-circle-dot"></i>
+              </div>
+              <p>
+                <a
+                  href="https://file.notion.so/f/s/d5c6476b-fed7-4ddf-a2d8-215af0a4bd8e/SR_UIX220100042_Arif_Setiawan.pdf?id=de9e2748-6b29-455e-adbe-9dab371ebdae&table=block&spaceId=6fea6c1c-643b-44cc-a680-2b80a566ae98&expirationTimestamp=1689004800000&signature=Rw5ZoT1Agbw-Ny2dGz0m_q2AIM1TO9SNFdnWjTUAa2Y&downloadName=SR_UIX220100042_Arif+Setiawan.pdf"
+                  target="_blank"
+                >
+                  SR_UIX220100042_Arif Setiawan.pdf
+                </a>
+              </p>
+            </div>
+            <div class="uiux">
+              <div class="my-uiux">
+                <i class="fa-regular fa-circle-dot"></i>
+              </div>
+              <p>
+                <a
+                  href="https://file.notion.so/f/s/b115c956-d108-41c0-aee6-3e48b00f7c17/setifikat_kelulusan.pdf?id=a16be1b0-a77a-4b1b-9d77-08ef2ac48a85&table=block&spaceId=6fea6c1c-643b-44cc-a680-2b80a566ae98&expirationTimestamp=1689004800000&signature=PzYjV7T_-9muUtToiDkUDqr8UuHH5gHnSa6Iw2U9n6A&downloadName=setifikat_kelulusan.pdf"
+                  target="_blank"
+                >
+                  sertifikat_kelulusan.pdf
+                </a>
+              </p>
+            </div>
+            <div class="uiux">
+              <div class="my-uiux">
+                <i class="fa-regular fa-circle-dot"></i>
+              </div>
+              <p>
+                <a
+                  href="https://file.notion.so/f/s/6e3b54ca-a29e-4359-99a9-c9cd401389b9/sertifikat_kelulusan_2.pdf?id=b2b26ef8-9cc0-400f-a963-3f2f912fb608&table=block&spaceId=6fea6c1c-643b-44cc-a680-2b80a566ae98&expirationTimestamp=1689004800000&signature=-7pU4GQHsxgyjNciSN1f1oMf6f5orjg1W20Td5TJuWU&downloadName=sertifikat_kelulusan_2.pdf"
+                  target="_blank"
+                >
+                  sertifikat_kelulusan2.pdf
+                </a>
+              </p>
+            </div>
+            <div class="uiux">
+              <div class="my-uiux">
+                <i class="fa-regular fa-circle-dot"></i>
+              </div>
+              <p>
+                <a
+                  href="https://file.notion.so/f/s/8abb838b-0426-44bc-b029-1a5c0e9a1e59/Udemy_Certificate.pdf?id=a764e7e3-3b66-48de-9fa4-dce57c032ea6&table=block&spaceId=6fea6c1c-643b-44cc-a680-2b80a566ae98&expirationTimestamp=1689004800000&signature=nv3iYOFvTBgcZLzTl4cHDIJpjJCWR91gukhmsMwnR0w&downloadName=Udemy+Certificate.pdf"
+                  target="_blank"
+                >
+                  Udemy Certificate.pdf
+                </a>
+              </p>
+            </div>
+            <div class="uiux">
+              <div class="my-uiux">
+                <i class="fa-regular fa-circle-dot"></i>
+              </div>
+              <p>
+                <a
+                  href="https://file.notion.so/f/s/cfd2138e-712c-4cb0-bb8d-fd35cc604f8d/complete-ui-designer-visual-design-prototype-usability-testing-arif-setiawan.pdf?id=ef88dc62-0af3-4670-86dc-97fe3800cc24&table=block&spaceId=6fea6c1c-643b-44cc-a680-2b80a566ae98&expirationTimestamp=1689004800000&signature=d7epJz7muaPOqt6M5LHYq83xfMBGDfinCMtVTWLd2RY&downloadName=complete-ui-designer-visual-design-prototype-usability-testing-arif-setiawan.pdf"
+                  target="_blank"
+                >
+                  complete-ui-designer-visual-design-prototype-usability-testing-arif-setiawan.pdf
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+
         <div>
           <a href="hire-me.html">
             <button class="btn-hire-me">
