--- a/home-page/web-development.html
+++ b/home-page/web-development.html
@@ -51,7 +51,7 @@
             </div>
             <div class="btn-download">
               <a
-                href="https://drive.google.com/file/d/1Ntuaw105SmAlV_AxuX3tV_7IWMMhIS1E/view?usp=share_link"
+                href="https://drive.google.com/file/d/1S6VFz8I13w4qHy9G0dzro8kRUolSgMkv/view?usp=sharing"
                 target="_blank"
               >
                 <button>
